--- a/front/champion.html
+++ b/front/champion.html
@@ -4,11 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="champion.css">
 </head>
 <body>
 
     <div id="champion"></div>
-    <button onclick="deleteChampion()">Delete</button>
+    <button class="delete" onclick="deleteChampion()">Delete</button>
 
     <script>
         let url = window.location.search
@@ -23,7 +24,7 @@
                     <h1>${data.name}</h1>
                     <h2>${data.type}</h2>
                     <a href="rename.html?id=${data.id}">Rename</a>
-                    <a href="index.html">Back</a> 
+                    <a class="back" href="index.html">Back</a> 
                 `
             })
 
@@ -34,6 +35,7 @@
             window.location.href = 'index.html'
         }
     </script>
+    
     
 </body>
 </html>
